ChangeLog for herdstat

2005-05-16 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Explicitly call PKG_PROG_PKG_CONFIG.  Gentoo bug
	92788.

2005-05-15 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Updated version (1.1.0_rc6).

2005-05-14 Aaron Walker <ka0ttic@gentoo.org>

	* src/herdstat.cc, src/options.cc, doc/herdstat.1.in, bashcomp: Added
	--with-maintainer and --no-maintainer.
	* src/action_pkg_handler.cc, src/action_pkg_handler.hh: Added support
	for --with-maintainer.  Move search error messages to it's own
	function, error().  Also moved the search found determination code to
	it's own member func, is_found().

2005-05-13 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Added gcc version check and define HAVE_GCC4 if using
	gcc-4.
	* lib/util_exceptions.hh, src/exceptions.hh: Use correct form of
	va_start if HAVE_GCC4.
	* src/action_meta_handler.cc: Fixed bug that caused 'herdstat -m' with
	no non-options to break.

2005-05-12 Aaron Walker <ka0ttic@gentoo.org>

	* doc/herdstat.1.in, doc/examples.txt, doc/default.css,
	doc/Makefile.am: Moved EXAMPLES section of manual page to it's own
	file, as it was starting to get quite large.  Stole Makefile.am
	snippet and default.css from eclectic, so credit to ciaranm for those.
	* src/misc.cc, src/misc.hh: Added util::map which at present provides
	keys() and values() member functions.
	* src/regex.hh: Fix typo.
	* lib/progress.hh: Initialize 'step' member to 0.

2005-05-11 Aaron Walker <ka0ttic@gentoo.org>

	* configure.ac: Update version (1.1.0_rc5).
	* lib/version-test.cc, lib/Makefile.am: Updated version-test to work
	again (haven't used it since the util::string move).
	* lib/file.hh: Use static_cast to ensure the '/' literal in
	util::path_T::split() argument is of the correct type (required for
	version_test to compile).
	* lib/portage_version.cc, lib/portage_version.hh: Fixed bug in version
	sorting code. Versions with extra characters after the version (for